use redux-toolkit and add counter example

--- a/src/renderer/public/locales/ko/common.json
+++ b/src/renderer/public/locales/ko/common.json
@@ -2,5 +2,6 @@
   "hello-title": "안녕, Retron! 이제 개발을 시작할 수 있습니다.",
   "hello-desc": "이제 사전 구성된 환경에서 당신만의 웹애플리케이션을 제작할 수 있습니다. 도움이 필요한 경우 프로젝트 페이지의 이슈트래커를 이용해주세요.",
   "using-version": "애플리케이션 버전: ",
+  "count-value": "카운트: ",
   "github": "프로젝트 소스코드"
 }
