--- a/src/renderer/public/locales/en/common.json
+++ b/src/renderer/public/locales/en/common.json
@@ -2,5 +2,6 @@
   "hello-title": "Hello, Retron! Now you can start developing.",
   "hello-desc": "You can now build your own web applications in a pre-configured environment. If you need help, please use the issue tracker on the project page.",
   "using-version": "Application Version: ",
+  "count-value": "Count: ",
   "github": "Project Source Code"
 }
