fix typo translation key

--- a/src/renderer/public/locales/de/common.json
+++ b/src/renderer/public/locales/de/common.json
@@ -3,5 +3,5 @@
   "hello-desc": "Sie können jetzt Ihre eigenen Webanwendungen in einer vorkonfigurierten Umgebung erstellen. Wenn Sie Hilfe benötigen, nutzen Sie bitte den Issue-Tracker auf der Projektseite.",
   "using-version": "Anwendungsversion: ",
   "count-value": "zählen: ",
-  "github": "Quellcode des Projekts"
+  "source-code": "Quellcode des Projekts"
 }
