--- a/src/renderer/public/locales/fr/common.json
+++ b/src/renderer/public/locales/fr/common.json
@@ -3,5 +3,5 @@
   "hello-desc": "Vous pouvez désormais créer vos propres applications Web dans un environnement préconfiguré. Si vous avez besoin d'aide, veuillez utiliser l'outil de suivi des problèmes sur la page du projet.",
   "using-version": "Version de l'application: ",
   "count-value": "compter: ",
-  "github": "code source du projet"
+  "source-code": "code source du projet"
 }
