--- a/src/renderer/public/locales/ja/common.json
+++ b/src/renderer/public/locales/ja/common.json
@@ -3,5 +3,5 @@
   "hello-desc": "これで、事前設定された環境で独自のWebアプリケーションを作成できます。 支援が必要な場合は、プロジェクトページの問題トラッカーを使用してください。",
   "using-version": "アプリケーションバージョン: ",
   "count-value": "カウント: ",
-  "github": "プロジェクトソースコード"
+  "source-code": "プロジェクトソースコード"
 }
